# HMDH

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buildspec.yml
UI/: CMakeLists.txt  deserialize.cpp
UI/include/: 1d.hpp  2d.hpp
UI/src/: 1d.cpp  2d.cpp
UI/static/csv/: negative_exponent_combinations.csv  positive_exponent_combinations.csv
UI/static/js/: histogram1d.js  histogram2d.js  index.js
UI/templates/: error.html  index.html  index1d.html  index2d.html
cmake/: CMakeLists.txt  config_options.cmake  install_crow.cmake  install_gtest.cmake  install_nlohmann_json.cmake  install_spdlog.cmake  install_tools.cmake
docs/: api.md
include/: BooleanArray.h  CMakeLists.txt  FeatureFlags.h  HMDH.h
include/ExportUtilities/: 1-D.h
include/FloatingPointTrie/: 1-D.h  2-D.h  ND.h
include/FloatingPointUtilities/: 1-D.h  2-D.h  ND.h
include/TrieOperation/: 1-D.h  2-D.h
include/TrieSerialization/: 1-D.h  2-D.h
lib/: CMakeLists.txt
lib/include/: logger.h
lib/plotting/: Quadrant-Plot.py
src/: BooleanArray.cpp  CMakeLists.txt
src/ExportUtilities/: 1-D.cpp
src/FloatingPointTrie/: 1-D.cpp  2-D.cpp
src/FloatingPointUtilities/: 1-D.cpp  2-D.cpp  ND.cpp
src/TrieOperation/: 1-D.cpp  2-D.cpp
src/TrieSerialization/: 1-D.cpp  2-D.cpp
tests/: CMakeLists.txt
tests/FnTest/: 1-D.cpp  2-D.cpp
tests/FnTest_Results/: 1D_output.json  2D_output.json
tests/UnitTest/: FpInternalManualTest.cpp  FpInternalTest_1D.cpp  HeaderDeserializationTest.cpp  SerializationTest.cpp  SpecialCaseTest.cpp
tests/utils/: utils.cpp  utils.h
